[gd_scene load_steps=4 format=3 uid="uid://c7web3kv7snq1"]

[ext_resource type="FontFile" uid="uid://dywjttgy6mph5" path="res://textures/Fonts/Pixelify_Sans/PixelifySans-VariableFont_wght.ttf" id="1_0mqpk"]
[ext_resource type="Script" uid="uid://bv72yvref08yv" path="res://scripts/Levels/Chapter 2/Chapter 2 Choices/start_choice_ch_2_minigame_1.gd" id="1_xjw0q"]
[ext_resource type="FontFile" uid="uid://tyx50xl5dux2" path="res://textures/Fonts/Pixelify_Sans/static/PixelifySans-Regular.ttf" id="2_xjw0q"]

[node name="StartChoiceCh2Minigame1" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 480.0
offset_bottom = 270.0
script = ExtResource("1_xjw0q")

[node name="TextureRect" type="TextureRect" parent="."]
z_index = 6
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 481.0
offset_bottom = 271.0
pivot_offset = Vector2(240, 0)

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_top = 209.0
offset_right = 480.0
offset_bottom = 270.0
color = Color(0, 0, 0, 0.588235)

[node name="RichTextLabel" type="RichTextLabel" parent="."]
z_index = 1
layout_mode = 0
offset_left = 32.0
offset_top = 233.0
offset_right = 406.0
offset_bottom = 262.0
theme_override_font_sizes/normal_font_size = 9
text = "Text"

[node name="SpeakerLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 9.0
offset_top = 215.0
offset_right = 111.0
offset_bottom = 230.0
theme_override_fonts/font = ExtResource("1_0mqpk")
theme_override_font_sizes/font_size = 11
text = "Text:"

[node name="ContinueWarningLabel" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 347.0
offset_top = 256.0
offset_right = 572.0
offset_bottom = 271.0
theme_override_fonts/font = ExtResource("1_0mqpk")
theme_override_font_sizes/font_size = 9
text = "press spacebar to continue.."

[node name="ReadyButton" type="Button" parent="."]
layout_mode = 0
offset_left = 415.0
offset_top = 214.0
offset_right = 469.0
offset_bottom = 238.0
theme_override_fonts/font = ExtResource("2_xjw0q")
theme_override_font_sizes/font_size = 12
text = "Ready"

[node name="NotYetButton" type="Button" parent="."]
layout_mode = 0
offset_left = 415.0
offset_top = 240.0
offset_right = 469.0
offset_bottom = 264.0
theme_override_fonts/font = ExtResource("2_xjw0q")
theme_override_font_sizes/font_size = 12
text = "Not Yet"

[connection signal="pressed" from="ReadyButton" to="." method="_on_ready_button_pressed"]
[connection signal="pressed" from="NotYetButton" to="." method="_on_not_yet_button_pressed"]
